Persistence to MySQL

--- a/templates/add.tpl.html
+++ b/templates/add.tpl.html
@@ -24,7 +24,7 @@
 </div>
 <div>
     <label>备注：</label>
-    <label><textarea name="desc">{{ .Desc }}</textarea></label>
+    <label><textarea name="remarks">{{ .Remarks }}</textarea></label>
 </div>
     <div>
         <label>密码：</label>
