--- a/templates/index.tpl.html
+++ b/templates/index.tpl.html
@@ -37,7 +37,7 @@
                 <td>{{ .Birthday }}</td>
                 <td>{{ .Tel }}</td>
                 <td>{{ .Address }}</td>
-                <td>{{ .Desc }}</td>
+                <td>{{ .Remarks }}</td>
                 <td>
                     <a href="/users/modify/?id={{ .Id }}">修改</a>
                     <a href="/users/delete/?id={{ .Id }}">删除</a>
